docker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project95
spec:
  selector:
      matchLabels:
        app: project95
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: project95
    spec:
      containers:
        - name: project95
          image: project95:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
        - name: db-server
          image: postgres:9.6.10
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
  selector:
    matchLabels:
      app: db-server
---
apiVersion: v1
kind: Service
metadata:
  name: db-server
  labels:
    app: db-server
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: db-server
---
kind: Service
apiVersion: v1
metadata:
  name: project95
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: project95
  type: LoadBalancer
